--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings    
 title: Xu Jin Blog    
-SEOTitle: 金旭的博客 | Xu Jin Blog
+SEOTitle: 金旭的个人网站 | Xu Jin Blog
 header-img: img/home-bg.jpg
 email: xjin96@pku.edu.cn  
-description: "这里是 @金旭 的个人博客，与你一起发现更大的世界 | 要做一个有永远向上的人"
+description: "这里是 @金旭 的个人网站，与你一起发现更大的世界 | 要做一个有永远向上的人"
 keyword: "金旭, Xu Jin, JIN的博客, 博客, 个人网站, 互联网, WMSDs, Ergonomics, Human Factor, Health, Work-related Musculoskeletal Disorders"
 url: "https://huangxuan.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
@@ -74,7 +74,7 @@ ga_domain:
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "最爱菱儿和小早"
+sidebar-about-description: "最爱菱儿和小早" 
 sidebar-avatar: https://avatars.githubusercontent.com/u/58058868?s=400&u=cbb6778481b94da82991f463ae54240bd9646d75&v=4 # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
