--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ future: true
 # SNS settings
 RSS: false
 weibo_username: 
-zhihu_username: 
-github_username: 
+zhihu_username: sleepwell
+github_username: xjinlz
 twitter_username: 
 #facebook_username:  
 #linkedin_username:  firstname-lastname-idxxxx
