--- a/_config.yml
+++ b/_config.yml
@@ -92,5 +92,5 @@ page-mathjax: false
 friends:
   [
     { title: "何丽华 教授", href: "https://sph.pku.edu.cn/info/1471/3844.htm" },
-    <br>{ title: "菱儿", href: " " },     
+    { title: "菱儿", href: " " },     
   ]
