--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 weibo_username: 
-zhihu_username: sleepwell 
+zhihu_username: sleepwell-39 
 github_username: xjinlz
 twitter_username: 
 #facebook_username:  
