--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ RSS: false
 weibo_username: 
 zhihu_username: sleepwell-39
 github_username: xjinlz
-twitter_username: 
+twitter_username:     
+research_username: Xu-Jin
 #facebook_username:  
 #linkedin_username:  firstname-lastname-idxxxx
 
