--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ weibo_username:
 zhihu_username: sleepwell-39
 github_username: xjinlz
 #twitter_username:     
-research_username: Xu-Jin                                            
+researchgate_username: Xu-Jin                                            
 #facebook_username:      
 #linkedin_username:  firstname-lastname-idxxxx 
 
