--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings    
-title: Xu Jin Blog    
+title: Xu Jin Blog
 SEOTitle: 九日个人网站 | Xu Jin Blog
-header-img: img/home-bg.jpg
-email: xjin96@pku.edu.cn  
+header-img: img/home-bg-2024.jpg
+email: xjin96@pku.edu.cn
 description: "这里是 @九日 的个人网站，与你一起发现更大的世界 | 要做一个有永远向上的人"
 keyword: "金旭, Xu Jin, JIN的博客, 博客, 个人网站, 互联网, WMSDs, Ergonomics, Human Factor, Health, Work-related Musculoskeletal Disorders"
 url: "https://github.com/xjinlz" # your host, for absolute URL
@@ -93,5 +93,5 @@ page-mathjax: false
 friends:
   [
     { title: "何丽华 教授", href: "https://sph.pku.edu.cn/info/1471/3844.htm" },
-    { title: "菱儿", href: " " },     
+    { title: "菱儿", href: " " },
   ]
