--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -3,11 +3,11 @@
   "short_name": "Jin Xu Blog",
   "description": "About a nobody who loves the world.",
   "icons": [{
-    "src": "icons/x128.png",
+    "src": "icons/xx128.png",
     "sizes": "128x128",
     "type": "image/png"
   }, {
-    "src": "icons/x512.png",
+    "src": "icons/xx512.png",
     "sizes": "512x512",
     "type": "image/png"
   }],
